choose language page completed
- choose language page complete with language localization
- choose lang drop down working properly
- need add shared pref for save the lang pref is pending

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,3 +1,7 @@
 {
-    "hei": "Hei There"
+    "title": "AAKRI KADA",
+    "slogan": "RECYCLE FOR A BETTER PLANET",
+    "selectLang": "Select language",
+    "poweredBy": "Powered by KSMA",
+    "getStarted":"GET STARTED"
 }
