language config completed
 - multiple language added (English,hindi,malayalam)
 - save prefferd language on shared pref
 - provider riverpod added
 - phone auth page form validation added
 - scaffold messager key addded for context

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -3,5 +3,11 @@
     "slogan": "RECYCLE FOR A BETTER PLANET",
     "selectLang": "Select language",
     "poweredBy": "Powered by KSMA",
-    "getStarted":"GET STARTED"
+    "getStarted":"GET STARTED",
+    "hiThere":"HI There",
+    "welcomeMessage":"Welcome to Aakrikada !",
+    "phoneNbr":"Phone number",
+    "enterPhnNbr":"Enter your Phone Number",
+    "continueTo":"CONTINUE",
+    "phnNbrError":"Enter a valid mobile number"
 }
