--- a/lib/l10n/app_hi.arb
+++ b/lib/l10n/app_hi.arb
@@ -9,5 +9,8 @@
     "phoneNbr":"Phone number",
     "enterPhnNbr":"अपना फोन नंबर डालें",
     "continueTo":"जारी रखना",
-    "phnNbrError":"एक मान्य मोबाइल नंबर दर्ज करें"
+    "phnNbrError":"एक मान्य मोबाइल नंबर दर्ज करें",
+    "verifyOtp": "ओटीपी सत्यापित करें",
+"resendOtp": "पुनः भेजें",
+"verify": "सत्यापित करें"
 }
