--- a/lib/l10n/app_ml.arb
+++ b/lib/l10n/app_ml.arb
@@ -9,5 +9,8 @@
   "phoneNbr": "ഫോൺ നമ്പർ",
   "enterPhnNbr": "നിങ്ങളുടെ ഫോൺ നമ്പർ നൽകുക",
   "continueTo": "തുടരുക",
-  "phnNbrError": "ശരിയായ മൊബൈൽ നമ്പർ നൽകുക"
+  "phnNbrError": "ശരിയായ മൊബൈൽ നമ്പർ നൽകുക",
+  "verifyOtp": "ഒടിപി സ്ഥിരീകരിക്കുക",
+"resendOtp": "വീണ്ടും അയയ്‌ക്കുക",
+"verify": "സ്ഥിരീകരിക്കുക"
 }
