--- a/lib/l10n/app_ml.arb
+++ b/lib/l10n/app_ml.arb
@@ -11,6 +11,16 @@
   "continueTo": "തുടരുക",
   "phnNbrError": "ശരിയായ മൊബൈൽ നമ്പർ നൽകുക",
   "verifyOtp": "ഒടിപി സ്ഥിരീകരിക്കുക",
-"resendOtp": "വീണ്ടും അയയ്‌ക്കുക",
-"verify": "സ്ഥിരീകരിക്കുക"
+  "resendOtp": "വീണ്ടും അയയ്‌ക്കുക",
+  "verify": "സ്ഥിരീകരിക്കുക",
+   "hi": "ഹായ്",
+  "categories": "ഞങ്ങളുടെ വിഭാഗങ്ങൾ",
+  "viewAll": "എല്ലാം കാണുക",
+  "iron": " ഇരുമ്പ്",
+  "newsPaper": "വാര്ത്താപത്രം",
+  "electrolic": "ഇലക്ട്രോണിക്",
+  "plastic": "പ്ലാസ്റ്റിക്",
+  "others": "മറ്റുള്ളവ",
+  "myProducts": "എന്റെ ഉൽപ്പന്നങ്ങൾ",
+  "profile": "പ്രൊഫൈൽ"
 }
