--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -12,5 +12,16 @@
     "phnNbrError":"Enter a valid mobile number",
     "verifyOtp":"Verify OTP",
     "resendOtp":"Resend",
-    "verify":"Verify"
+    "verify":"Verify",
+    "hi":"HI",
+    "categories":"Our categories",
+    "viewAll":"View all",
+    "iron":"Iron",
+    "newsPaper":"News Paper",
+    "electrolic":"Electronic",
+    "plastic":"Plastic",
+    "others":"Others",
+    "myProducts":"My Products",
+    "profile":"Profile"
+    
 }
