--- a/lib/l10n/app_ml.arb
+++ b/lib/l10n/app_ml.arb
@@ -22,5 +22,13 @@
   "plastic": "പ്ലാസ്റ്റിക്",
   "others": "മറ്റുള്ളവ",
   "myProducts": "എന്റെ ഉൽപ്പന്നങ്ങൾ",
-  "profile": "പ്രൊഫൈൽ"
+  "profile": "പ്രൊഫൈൽ",
+  "myAc": "എന്റെ അക്കൗണ്ട്",
+  "myProfile": "എന്റെ പ്രൊഫൈൽ",
+  "myAdress": "എന്റെ വിലാസം",
+  "logOut": "ലോഗൗട്ട്",
+  "myOders": "എന്റെ ഓർഡറുകൾ",
+  "accepted": "സ്വീകരിച്ചു",
+  "created": "ഉണ്ടാക്കി"
+
 }
