--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -22,6 +22,13 @@
     "plastic":"Plastic",
     "others":"Others",
     "myProducts":"My Products",
-    "profile":"Profile"
+    "profile":"Profile",
+    "myAc":"My Account",
+    "myProfile":"My Profile",
+    "myAdress":"My Address",
+    "logOut":"Logout",
+    "myOders":"My Orders",
+    "accepted":"Accepted",
+    "created":"Created"
     
 }
