--- a/lib/l10n/app_ml.arb
+++ b/lib/l10n/app_ml.arb
@@ -29,6 +29,25 @@
   "logOut": "ലോഗൗട്ട്",
   "myOders": "എന്റെ ഓർഡറുകൾ",
   "accepted": "സ്വീകരിച്ചു",
-  "created": "ഉണ്ടാക്കി"
+  "created": "ഉണ്ടാക്കി",
+  "createAd": "ഒരു പരസ്യം സൃഷ്ടിക്കുക",
+  "latestList": "പുതിയ ലിസ്റ്റിംഗ്",
+  "selectCategory": "വിഭാഗം തിരഞ്ഞെടുക്കുക",
+  "summary": "സാരാംശം",
+  "briefSummary": "നിങ്ങളുടെ ഇനങ്ങളുടെ സംക്ഷിപ്ത വിവരണം",
+  "approxNbr": "അന്ദಾಜ് ഇനങ്ങളുടെ എണ്ണം",
+  "priority": "പ്രാധാന്യം",
+  "userInfo": "ഉപയോക്തൃ വിവരങ്ങൾ",
+  "chooseAdress": "വിലാസം തിരഞ്ഞെടുക്കുക",
+  "preferrrdPickup": "ഐച്ഛിക പിക്കപ്പ് സമയം",
+  "high": "ഉയർന്നത്",
+  "medium": "മധ്യത്തിലുള്ളത്",
+  "low": "കുറഞ്ഞത്",
+  "create": "സൃഷ്ടിക്കുക",
+  "orderDetails": "ഓർഡർ വിശദാംശങ്ങൾ",
+  "quotes": "ഉദ്ധരണികൾ",
+  "selected": "തിരഞ്ഞെടുത്തു",
+  "accept": "സ്വീകരിക്കുക"
+
 
 }
