ui section my profile section also done
- ui almost done
- edit profile section complete
- language localization complete

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -47,7 +47,13 @@
      "orderDetails": "Order Details",
     "quotes": "Quotes",
     "selected": "SELECTED",
-    "accept": "Accept"
+    "accept": "Accept",
+    "update": "UPDATE",
+    "addAddress": "Add Address",
+    "confirm": "Confirm !",
+    "confirmLogout": "Are you sure to logout from the app?",
+    "no": "NO",
+    "yes": "YES"
 
     
 }
