--- a/lib/l10n/app_hi.arb
+++ b/lib/l10n/app_hi.arb
@@ -47,7 +47,13 @@
     "orderDetails": "ऑर्डर विवरण",
     "quotes": "उद्धरण",
     "selected": "चुना गया",
-    "accept": "स्वीकार करें"
+    "accept": "स्वीकार करें",
+      "update": "अपडेट करें",
+    "addAddress": "पता जोड़ें",
+    "confirm": "पुष्टि करें!",
+    "confirmLogout": "क्या आप वाकई ऐप से लॉगआउट करना चाहते हैं?",
+    "no": "नहीं",
+    "yes": "हाँ"
 
 
 }
