--- a/lib/l10n/app_ml.arb
+++ b/lib/l10n/app_ml.arb
@@ -47,7 +47,13 @@
   "orderDetails": "ഓർഡർ വിശദാംശങ്ങൾ",
   "quotes": "ഉദ്ധരണികൾ",
   "selected": "തിരഞ്ഞെടുത്തു",
-  "accept": "സ്വീകരിക്കുക"
+  "accept": "സ്വീകരിക്കുക",
+  "update": "അപ്ഡേറ്റ് ചെയ്യുക",
+  "addAddress": "വിലാസം ചേർക്കുക",
+  "confirm": "സ്ഥിരീകരിക്കുക!",
+  "confirmLogout": "നിങ്ങൾ ആപ്പിൽ നിന്ന് ലോഗൗട്ട് ചെയ്യാൻ ഉറപ്പാണോ?",
+  "no": "ഇല്ല",
+  "yes": "അതെ"
 
 
 }
