--- a/lib/l10n/app_hi.arb
+++ b/lib/l10n/app_hi.arb
@@ -53,7 +53,8 @@
     "confirm": "पुष्टि करें!",
     "confirmLogout": "क्या आप वाकई ऐप से लॉगआउट करना चाहते हैं?",
     "no": "नहीं",
-    "yes": "हाँ"
+    "yes": "हाँ",
+    "loginSuccess": "लॉगिन सफल रहा"
 
 
 }
