--- a/lib/l10n/app_ml.arb
+++ b/lib/l10n/app_ml.arb
@@ -53,7 +53,8 @@
   "confirm": "സ്ഥിരീകരിക്കുക!",
   "confirmLogout": "നിങ്ങൾ ആപ്പിൽ നിന്ന് ലോഗൗട്ട് ചെയ്യാൻ ഉറപ്പാണോ?",
   "no": "ഇല്ല",
-  "yes": "അതെ"
+  "yes": "അതെ",
+  "loginSuccess": "ലോഗിൻ വിജയകരമായി നടന്നു"
 
 
 }
