alingment issue solved
 - tab bar alingment issue solved
 - new tab added

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -16,6 +16,7 @@
     "hi":"HI",
     "categories":"Our categories",
     "viewAll":"View all",
+    "all":"All",
     "iron":"Iron",
     "newsPaper":"News Paper",
     "electrolic":"Electronic",
