--- a/lib/l10n/app_hi.arb
+++ b/lib/l10n/app_hi.arb
@@ -54,7 +54,8 @@
     "confirmLogout": "क्या आप वाकई ऐप से लॉगआउट करना चाहते हैं?",
     "no": "नहीं",
     "yes": "हाँ",
-    "loginSuccess": "लॉगिन सफल रहा"
+    "loginSuccess": "लॉगिन सफल रहा",
+    "all": "सभी"
 
 
 }
