--- a/lib/l10n/app_ml.arb
+++ b/lib/l10n/app_ml.arb
@@ -54,7 +54,8 @@
   "confirmLogout": "നിങ്ങൾ ആപ്പിൽ നിന്ന് ലോഗൗട്ട് ചെയ്യാൻ ഉറപ്പാണോ?",
   "no": "ഇല്ല",
   "yes": "അതെ",
-  "loginSuccess": "ലോഗിൻ വിജയകരമായി നടന്നു"
+  "loginSuccess": "ലോഗിൻ വിജയകരമായി നടന്നു",
+  "all": "എല്ലാം"
 
 
 }
