--- a/lib/l10n/app_ml.arb
+++ b/lib/l10n/app_ml.arb
@@ -55,7 +55,23 @@
   "no": "ഇല്ല",
   "yes": "അതെ",
   "loginSuccess": "ലോഗിൻ വിജയകരമായി നടന്നു",
-  "all": "എല്ലാം"
+  "all": "എല്ലാം",
+  "town": "നഗരം",
+"district": "ജില്ല",
+"area": "പ്രദേശം",
+"saveAddress": "വിലാസം സംരക്ഷിക്കുക",
+"fillAlltheFields": "എല്ലാ ഫീൽഡുകളും പൂരിപ്പിക്കുക",
+"errorAddress": "നിങ്ങളുടെ സ്ഥാനം നേടുന്നതിൽ പിശക് ..വീണ്ടും ശ്രമിക്കുക",
+"noAddressFound": "വിലാസം കണ്ടെത്താനായില്ല",
+"chooseProfile": "പ്രൊഫൈൽ തിരഞ്ഞെടുക്കുക",
+"enterEmail": "നിങ്ങളുടെ ഇമെയിൽ നൽകുക",
+"emailRequired": "ഇമെയിൽ ആവശ്യമാണ്",
+"enterValidemail": "സാധുവായ ഒരു ഇമെയിൽ നൽകുക",
+"enterName": "നിങ്ങളുടെ പേര് നൽകുക",
+"nameRequired": "പേര് ആവശ്യമാണ്",
+"nameHave3Char": "പേരിന് കുറഞ്ഞത് 3 അക്ഷരങ്ങൾ ഉണ്ടായിരിക്കണം"
+
+
 
 
 }
